--- a/settings.gradle
+++ b/settings.gradle
@@ -12,8 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-
 rootProject.name = "ExamenU2"
-include(":app")
-include(":app")
- 
+include ':app'
